--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ header {
 }
 h1 {
     width: fit-content;
-    border-bottom: 6px dashed #000;
+    border-bottom: 6px solid #4A90E2;
 }
 .rules {
     display: flex;
@@ -14,6 +14,10 @@ h1 {
     align-items: center;
     flex-direction: column;
     margin: 2em 1em 1em 1em;
+}
+.rules > p {
+    width: 50%;
+    text-align: center;
 }
 .inputArea {
     display: flex;
@@ -30,27 +34,31 @@ h1 {
     min-height: 10vh;
     max-height: 60vh;
 
-    border: 2px solid #000;
-    background-color: #FAF0E6;
+    border: 2px solid #ccc;
+    background-color: #FFFFFF;
     border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     padding: 3px;
 }
 #button {
     width: 20%;
     height: 2.5em;
-    border: 2px solid #000;
-    background-color: #808080;
+    border: none;
+    background-color: #6AA84F;
+    box-shadow: 0 4px #4F783A;
+    color: #ffffff;
     border-radius: 20px;
     cursor: pointer;
     font-weight: 700;
     transition: 0.3s;
 }
 #button:hover {
-    background-color: #9e9e9e;
+    background-color: #7BB85F;
+    box-shadow: 0 2px #4F783A;
     transform: scale(1.2);
 }
 #button:active  {
-    background-color: #d4d4d4;
+    background-color: #385c27;
 }
 .outputh2 {
     text-align: center;
@@ -62,7 +70,40 @@ h1 {
     align-items: center;
     flex-direction: column;
     word-break: break-all;
+    margin: 2rem;
 }
 #paragrahElementID0, #paragrahElementID2, #paragrahElementID4 {
     font-weight: 700;
+}
+
+
+#paragrahElementID3, #paragrahElementID1 {
+    max-height: 20vh;
+    width: 60%;
+    overflow-y: auto;
+    border: 2px solid #ccc;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 3px;
+}
+
+#paragrahElementID1 {
+    word-break: keep-all;
+}
+
+#paragrahElementID2 {
+    margin-top: 1em;
+}
+
+#paragrahElementID3 {
+    word-break: break-all;
+    font-family: 'Roboto-Mono', monospace;
+}
+
+#paragrahElementID4 {
+    margin-top: 1em;
+}
+#paragrahElementID5, #paragrahElementID6, #paragrahElementID7, #paragrahElementID8, #paragrahElementID9 {
+    margin-top: 0.5em;
 }
